<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_padding_side"
                android:text="@string/time">
            </TextView>
            <Button
                android:id="@+id/btn_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btn_time_onClick"
                android:text="@string/time_now">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_padding_side"
                android:text="@string/color">
            </TextView>
            <Button
                android:id="@+id/btn_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btn_color_onClick"
                android:text="">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/et_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start"
        android:layout_below="@id/ll1"
        android:layout_above="@id/ll2">
    </EditText>
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btn_ok_onClick"
            android:text="@string/Btn_OK">
        </Button>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btn_cancel_onClick"
            android:text="@string/Btn_Cancel">
        </Button>
    </LinearLayout>
</RelativeLayout>